version/0.5/_sources/methods/_autosummary_geometry_methods/ansys.motorcad.core.geometry.Region.rst.txt
Region
======

.. currentmodule:: ansys.motorcad.core.geometry

.. autoclass:: Region

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      Region.add_entity
      
      
      Region.add_point
      
      
      Region.collides
      
      
      Region.edit_point
      
      
      Region.find_entity_from_coordinates
      
      
      Region.from_coordinate_list
      
      
      Region.insert_entity
      
      
      Region.insert_polyline
      
      
      Region.is_closed
      
      
      Region.mirror
      
      
      Region.remove_entity
      
      
      Region.replace
      
      
      Region.rotate
      
      
      Region.subtract
      
      
      Region.translate
      
      
      Region.unite
      
      
      Region.update
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      Region.child_names
      Region.children
      Region.motorcad_instance
      Region.parent
      Region.parent_name
      Region.points
      Region.region_type
   
   